Most recent run in notebook

--- a/notebooks/proto_gen_model.ipynb
+++ b/notebooks/proto_gen_model.ipynb
@@ -9,15 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "2023-10-10 22:13:11.597114: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "/home/brunokm/.pyenv/versions/3.11.3/envs/jax-learning-inv/lib/python3.11/site-packages/tensorflow_addons/utils/tfa_eol_msg.py:23: UserWarning: \n",
+      "\n",
+      "TensorFlow Addons (TFA) has ended development and introduction of new features.\n",
+      "TFA has entered a minimal maintenance and release mode until a planned end of life in May 2024.\n",
+      "Please modify downstream libraries to take dependencies from other repositories in our TensorFlow community (e.g. Keras, Keras-CV, and Keras-NLP). \n",
+      "\n",
+      "For more information see: https://github.com/tensorflow/addons/issues/2807 \n",
+      "\n",
+      "  warnings.warn(\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1696972393.192006 2310732 tfrt_cpu_pjrt_client.cc:349] TfrtCpuClient created.\n"
      ]
     }
    ],
@@ -68,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,9 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mbrunokm\u001b[0m (\u001b[33minvariance-learners\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -127,7 +144,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/home/brunokm/projects/learning-invariances/notebooks/wandb/run-20231010_143906-532jx207</code>"
+       "Run data is saved locally in <code>/home/brunokm/projects/learning-invariances/notebooks/wandb/run-20231010_221315-lcrid8nk</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -139,7 +156,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/invariance-learners/iclr2024experiments/runs/532jx207' target=\"_blank\">warm-fire-343</a></strong> to <a href='https://wandb.ai/invariance-learners/iclr2024experiments' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href='https://wandb.ai/invariance-learners/iclr2024experiments/runs/lcrid8nk' target=\"_blank\">giddy-smoke-357</a></strong> to <a href='https://wandb.ai/invariance-learners/iclr2024experiments' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -163,7 +180,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/invariance-learners/iclr2024experiments/runs/532jx207' target=\"_blank\">https://wandb.ai/invariance-learners/iclr2024experiments/runs/532jx207</a>"
+       " View run at <a href='https://wandb.ai/invariance-learners/iclr2024experiments/runs/lcrid8nk' target=\"_blank\">https://wandb.ai/invariance-learners/iclr2024experiments/runs/lcrid8nk</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -187,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +230,7 @@
        "1"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -234,16 +251,12 @@
       "INFO:absl:Load dataset info from /home/brunokm/tensorflow_datasets/mnist/3.0.1\n",
       "INFO:absl:Fields info.[citation, splits, supervised_keys, module_name] from disk and from code do not match. Keeping the one from code.\n",
       "INFO:absl:Reusing dataset mnist (/home/brunokm/tensorflow_datasets/mnist/3.0.1)\n",
+      "2023-10-10 22:13:16.456143: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1960] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n",
       "INFO:absl:Constructing tf.data.Dataset mnist for split _EvenSplit(split='train[10000:]', index=0, count=1, drop_remainder=False), from /home/brunokm/tensorflow_datasets/mnist/3.0.1\n",
       "INFO:absl:Features before preprocessing: {'image': 'uint8[28, 28, 1]', 'label': 'int64[]', 'rng': 'int32[2]'}\n",
       "INFO:absl:Features after op ValueRange(vmin=-1, vmax=1, in_min=0, in_max=255.0, clip_values=False, key='image', key_result=None):\n",
-      "{'image': 'float32[28, 28, 1]', 'label': 'int64[]', 'rng': 'int32[2]'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "{'image': 'float32[28, 28, 1]', 'label': 'int64[]', 'rng': 'int32[2]'}\n",
       "INFO:absl:Features after op RandomRotate(θ_min=-3.141592653589793, θ_max=3.141592653589793, fill_mode='nearest', fill_value=-1, key='image', key_result=None, rng_key='rng'):\n",
       "{'image': 'float32[28, 28, 1]', 'label': 'int64[]', 'rng': 'int32[2]'}\n",
       "INFO:absl:Features after op Keep(keys=['image', 'label']):\n",
@@ -281,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -348,17 +361,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  597/10000 [>.............................] - ETA: 5:19 - invertibility_loss: 5.4505e-04 - loss: 0.1889 - x_mse: 0.1889 - η_recon_loss: 0.4643 - invertibility_loss_test: 0.0014 - loss_test: 0.3443 - x_mse_test: 0.3443 - η_recon_loss_test: 0.4689 - label_paired_image_mse_test: 0.3958     A: 23:38 - invertibility_loss: 0.0010 - loss: 0.2366 - x_mse: 0.2366 - η_recon_loss: 0.5361 - invertibility_loss_test: 0.0014 - loss_test: 0.4638 - x_mse_test: 0.4638 - η_recon_loss_test: 0.5800 - label_paired_image_mse_test: 0.00 - ETA: 18:38 - invertibility_loss: 9.8720e-04 - loss: 0.2282 - x_mse: 0.2282 - η_recon_loss: 0.5220 - invertibility_loss_test: 0.0014 - loss_test: 0.4638 - x_mse_test: 0.4638 - η_recon_loss_test: 0.5800 - label_paired_image_mse_test: 0.0000e+0 - ETA: 18:02 - invertibility_loss: 9.8266e-04 - loss: 0.2270 - x_mse: 0.2270 - η_recon_loss: 0.5203 - invertibility_loss_test: 0.0014 - loss_test: 0.4638 - x_mse_test: 0.4638 - η_recon_loss_test: 0.5800 - label_paired_image_mse_test: 0.0000e+0 - ETA: 17:28 - invertibility_loss: 9.7633e-04 - loss: 0.2260 - x_mse: 0.2260 - η_recon_loss: 0.5184 - invertibility_loss_test: 0.0014 - loss_test: 0.4638 - x_mse_test: 0.4638 - η_recon_loss_test: 0.5800 - label_paired_image_mse_test: 0.0000e+0 - ETA: 16:57 - invertibility_loss: 9.7181e-04 - loss: 0.2249 - x_mse: 0.2249 - η_recon_loss: 0.5169 - invertibility_loss_test: 0.0014 - loss_test: 0.4638 - x_mse_test: 0.4638 - η_r - ETA: 8:28 - invertibility_loss: 6.3187e-04 - loss: 0.1879 - x_mse: 0.1879 - η_recon_loss: 0.4711 - invertibility_loss_test: 0.0015 - loss_test: 0.3582 - x_mse_test: 0.3582 - η_recon_loss_test: 0.4749 - label_paired_image_mse_test: 0. - ETA: 8:20 - invertibility_loss: 6.3095e-04 - loss: 0.1877 - x_mse: 0.1877 - η_recon_loss: 0.4706 - invertibility_loss_test: 0.0015 - loss_test: 0.3582 - x_mse_test: 0.3582 - η_recon_loss_test: 0.4749 - label_paired_image_mse_test: 0.41 - ETA: 8:16 - invertibility_loss: 6.2596e-04 - loss: 0.1879 - x_mse: 0.1879 - η_recon_loss: 0.4712 - invertibility_loss_test: 0.0015 - loss_test: 0.3582 - x_mse_test: 0.3582 - η_recon_loss_test: 0.4749 - label_paired_image_mse_test: 0.41 - ETA: 8:12 - invertibility_loss: 6.2631e-04 - loss: 0.1877 - x_mse: 0.1877 - η_recon_loss: 0.4712 - invertibility_loss_test: 0.0015 - loss_test: 0.3582 - x_mse_test: 0.3582 - η_recon_loss_test: 0.4749 - label_paired_image_mse_test: 0. - ETA: 8:05 - invertibility_loss: 6.1700e-04 - loss: 0.1876 - x_mse: 0.1876 - η_recon_loss: 0.4709 - invertibility_loss_test: 0.0015 - loss_test: 0.3582 - x_mse_test: 0.3582 - η_recon_loss_test: 0.4749 - label_paired_image_mse_test: 0.41 - ETA: 8:02 - invertibility_loss: 6.2832e-04 - loss: 0.1876 - x_mse: 0.1876 - η_recon_loss: 0.4705 - invertibility_loss_test: 0.0015 - loss_test: 0.3582 - x_mse_test: 0.3582 - η_recon_loss_test: 0.4749 - label_paired_image_mse_test: 0.41 - ETA: 7:58 - invertibility_loss: 6.2778e-04 - loss: 0.1876 - x_mse: 0.1876 - η_recon_loss: 0.4704 - invertibility_loss_test: 0.0015 - loss_test: 0.3582 - x_mse_test: 0.3582 - η_recon_loss_test: 0.4749 - label_paired_image_mse_test: 0.41 - ETA: 7:55 - invertibility_loss: 6.2521e-04 - loss: 0.1874 - x_mse: 0.1874 - η_recon_loss: 0.4704 - invertibility_loss_test: 0.0015 - loss_test: 0.3582 - x_mse_test: 0.3582 - η_recon_loss_test: 0.4749 - label_paired_image_mse_test: 0. - ETA: 7:49 - invertibility_loss: 6.2458e-04 - loss: 0.1871 - x_mse: 0.1871 - η_recon_loss: 0.4699 - invertibility_loss_test: 0.0015 - loss_test: 0.3582 - x_mse_test: 0.3582 - η_recon_loss_test: 0.4749 - label_paired_image_mse_test: 0.41 - ETA: 7:46 - invertibility_loss: 6.2059e-04 - loss: 0.1872 - x_mse: 0.1872 - η_recon_loss: 0.4700 - invertibility_loss_test: 0.0015 - loss_test: 0.3582 - x_mse_test: 0.3582 - η_recon_loss_test: 0.4749 - label_paired_image_mse_test: 0.41 - ETA: 7:43 - invertibility_loss: 6.2160e-04 - loss: 0.1871 - x_mse: 0.1871 - η_recon_loss: 0.4696 - invertibility_loss_test: 0.0015 - loss_test: 0.3582 - x_mse_test: 0.3582 - η_recon_loss_test: 0.47 - ETA: 6:55 - invertibility_loss: 6.1583e-04 - loss: 0.1865 - x_mse: 0.1865 - η_recon_loss: 0.4660 - invertibility_loss_test: 0.0014 - loss_test: 0.3509 - x_mse_test: 0.3509 - η_recon_loss_test: 0.4728 - label_paired_image_mse_test: 0. - ETA: 6:51 - invertibility_loss: 6.2727e-04 - loss: 0.1865 - x_mse: 0.1865 - η_recon_loss: 0.4645 - invertibility_loss_test: 0.0014 - loss_test: 0.3509 - x_mse_test: 0.3509 - η_recon_loss_test: 0.4728 - label_paired_image_mse_test: 0.40 - ETA: 6:49 - invertibility_loss: 6.2025e-04 - loss: 0.1865 - x_mse: 0.1865 - η_recon_loss: 0.4650 - invertibility_loss_test: 0.0014 - loss_test: 0.3509 - x_mse_test: 0.3509 - η_recon_loss_test: 0.4728 - label_paired_image_mse_test: 0.40 - ETA: 6:47 - invertibility_loss: 6.1477e-04 - loss: 0.1866 - x_mse: 0.1866 - η_recon_loss: 0.4656 - invertibility_loss_test: 0.0014 - loss_test: 0.3509 - x_mse_test: 0.3509 - η_recon_loss_test: 0.4728 - label_paired_image_mse_test: 0.40 - ETA: 6:45 - invertibility_loss: 6.1922e-04 - loss: 0.1864 - x_mse: 0.1864 - η_recon_loss: 0.4652 - invertibility_loss_test: 0.0014 - loss_test: 0.3509 - x_mse_test: 0.3509 - η_recon_loss_test: 0.4728 - label_paired_image_mse_test: 0.40 - ETA: 6:43 - invertibility_loss: 6.1863e-04 - loss: 0.1862 - x_mse: 0.1862 - η_recon_loss: 0.4652 - invertibility_loss_test: 0.0014 - loss_test: 0.3509 - x_mse_test: 0.3509 - η_recon_loss_test: 0.4728 - label_paired_image_mse_test: 0.40 - ETA: 6:41 - invertibility_loss: 6.1592e-04 - loss: 0.1863 - x_mse: 0.1863 - η_recon_loss: 0.4654 - invertibility_loss_test: 0.0014 - loss_test: 0.3509 - x_mse_test: 0.3509 - η_recon_loss_test: 0.4728 - label_paired_image_mse_test: 0.40 - ETA: 6:40 - invertibility_loss: 6.1951e-04 - loss: 0.1864 - x_mse: 0.1864 - η_recon_loss: 0.4661 - invertibility_loss_test: 0.0014 - loss_test: 0.3509 - x_mse_test: 0.3509 - η_recon_loss_test: 0.4728 - label_paired_image_mse_test: 0.40 - ETA: 6:38 - invertibility_loss: 6.1672e-04 - loss: 0.1865 - x_mse: 0.1865 - η_recon_loss: 0.4667 - invertibility_loss_test: 0.0014 - loss_test: 0.3509 - x_mse_test: 0.3509 - η_recon_loss_test: 0.4728 - label_paired_image_mse_test: 0.40 - ETA: 6:36 - invertibility_loss: 6.1144e-04 - loss: 0.1866 - x_mse: 0.1866 - η_recon_loss: 0.4671 - invertibility_loss_test: 0.0014 - loss_test: 0.3509 - x_mse_test: 0.3509 - η_recon_loss_test: 0.4728 - label_paired_image_mse_test: 0. - ETA: 6:33 - invertibility_loss: 6.0740e-04 - loss: 0.1868 - x_mse: 0.1868 - η_recon_loss: 0.4668 - invertibility_loss_test: 0.0014 - loss_test: 0.3509 - x_mse_test: 0.3509 - η_recon_loss_test: 0.4728 - label_paired_image_mse_test: 0.40 - ETA: 6:32 - invertibility_loss: 6.0509e-04 - loss: 0.1870 - x_mse: 0.1870 - η_recon_loss: 0.4670 - invertibility_loss_test: 0.0014 - loss_test: 0.3509 - x_mse_test: 0.3509 - η_recon_loss_test: 0.4728 - label_paired_image_mse_test: 0.40 - ETA: 6:30 - invertibility_loss: 6.0307e-04 - loss: 0.1870 - x_mse: 0.1870 - η_recon_loss: 0.4668 - invertibility_loss_test: 0.0014 - loss_test: 0.3509 - x_mse_test: 0.3509 - η_recon_l - ETA: 6:05 - invertibility_loss: 5.9026e-04 - loss: 0.1872 - x_mse: 0.1872 - η_recon_loss: 0.4652 - invertibility_loss_test: 0.0014 - loss_test: 0.3476 - x_mse_test: 0.3476 - η_recon_loss_test: 0.4692 - label_paired_image_mse_test: 0.39 - ETA: 6:03 - invertibility_loss: 5.9060e-04 - loss: 0.1872 - x_mse: 0.1872 - η_recon_loss: 0.4653 - invertibility_loss_test: 0.0014 - loss_tes"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total_steps = config.inf_steps\n",
     "proto_final_state, history, _ = ciclo.train_loop(\n",
