--- a/notebooks/proto_gen_model.ipynb
+++ b/notebooks/proto_gen_model.ipynb
@@ -26,9 +26,7 @@
                         "\n",
                         "For more information see: https://github.com/tensorflow/addons/issues/2807 \n",
                         "\n",
-                        "  warnings.warn(\n",
-                        "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-                        "I0000 00:00:1697027187.132788   29449 tfrt_cpu_pjrt_client.cc:349] TfrtCpuClient created.\n"
+                        "  warnings.warn(\n"
                     ]
                 }
             ],
@@ -183,7 +181,7 @@
                 "    project=\"iclr2024experiments\",\n",
                 "    entity=\"invariance-learners\",\n",
                 "    config=config.to_dict(),\n",
-                "    mode=\"online\",\n",
+                "    mode=\"offline\",\n",
                 "    notes=\"\",\n",
                 "    name=None,\n",
                 "    settings=wandb.Settings(code_dir=\"../\"),\n",
@@ -618,7 +616,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 15,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -681,7 +679,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 21,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -1346,7 +1344,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.11.3"
+            "version": "3.11.5"
         },
         "orig_nbformat": 4
     },
