--- a/notebooks/proto_gen_model.ipynb
+++ b/notebooks/proto_gen_model.ipynb
@@ -212,7 +212,7 @@
    "outputs": [],
    "source": [
     "rng = random.PRNGKey(config.seed)\n",
-    "data_rng, proto_init_rng, gen_init_rng, proto_state_rng, gen_state_rng = random.split(rng, 5)"
+    "data_rng, proto_init_rng, gen_init_rng = random.split(rng, 3)"
    ]
   },
   {
@@ -333,7 +333,7 @@
    "source": [
     "proto_model = TransformationInferenceNet(**config.model.inference.to_dict())\n",
     "\n",
-    "create_transformation_inference_state(proto_model, proto_state_rng, proto_init_rng, config)"
+    "create_transformation_inference_state(proto_model, proto_init_rng, config)"
    ]
   },
   {
@@ -684,7 +684,7 @@
    "source": [
     "gen_model = TransformationGenerativeNet(**config.model.generative.to_dict())\n",
     "\n",
-    "gen_state = create_transformation_generative_state(gen_model, gen_state_rng, gen_init_rng, config)"
+    "gen_state = create_transformation_generative_state(gen_model, gen_init_rng, config)"
    ]
   },
   {
