Reorder create_XXX_state args so that config is 2nd

--- a/notebooks/proto_gen_model.ipynb
+++ b/notebooks/proto_gen_model.ipynb
@@ -333,7 +333,7 @@
    "source": [
     "proto_model = TransformationInferenceNet(**config.model.inference.to_dict())\n",
     "\n",
-    "create_transformation_inference_state(proto_model, proto_init_rng, config)"
+    "proto_state = create_transformation_inference_state(proto_model, config, proto_init_rng)"
    ]
   },
   {
@@ -684,7 +684,7 @@
    "source": [
     "gen_model = TransformationGenerativeNet(**config.model.generative.to_dict())\n",
     "\n",
-    "gen_state = create_transformation_generative_state(gen_model, gen_init_rng, config)"
+    "gen_state = create_transformation_generative_state(gen_model, config, gen_init_rng)"
    ]
   },
   {
