--- a/notebooks/vae_mnist.ipynb
+++ b/notebooks/vae_mnist.ipynb
@@ -268,7 +268,7 @@
    "source": [
     "model = VAE(**config.model.to_dict())\n",
     "\n",
-    "state = create_vae_state(model, init_rng, config)"
+    "state = create_vae_state(model, config, init_rng)"
    ]
   },
   {
