Allow optional bounds and remove separate model/aug bounds

--- a/notebooks/figures_for_paper.ipynb
+++ b/notebooks/figures_for_paper.ipynb
@@ -209,7 +209,11 @@
     "\n",
     "# Load the prototype model\n",
     "proto_config, proto_state = get_config_state(prototype_model_dir)\n",
-    "proto_model = TransformationInferenceNet(**proto_config.model.inference)\n",
+    "proto_model = TransformationInferenceNet(\n",
+    "    bounds=proto_config.get(\"augment_bounds\", None),\n",
+    "    offset=proto_config.get(\"augment_offset\", None),\n",
+    "    **proto_config.model.inference\n",
+    ")\n",
     "\n",
     "def prototype_transform_function(x, rng):\n",
     "    η = proto_model.apply({\"params\": proto_state[\"params\"]}, x, train=False).sample(\n",
@@ -255,7 +259,11 @@
     "# Load the generative model\n",
     "\n",
     "gen_config, gen_state = get_config_state(gen_model_dir)\n",
-    "gen_model = TransformationGenerativeNet(**gen_config.model.generative)\n",
+    "gen_model = TransformationGenerativeNet(\n",
+    "    bounds=gen_config.get(\"augment_bounds\", None),\n",
+    "    offset=gen_config.get(\"augment_offset\", None),\n",
+    "    **gen_config.model.generative\n",
+    ")\n",
     "p,_  = gen_model.apply({\"params\": gen_state[\"params\"]}, jnp.zeros((64, 64, 1)),η =jnp.zeros((5,)), train=False)\n",
     "\n",
     "\n",
@@ -1897,10 +1905,18 @@
     "):\n",
     "    # Load the prototype model\n",
     "    proto_config, proto_state = get_config_state(proto_checkpoint_dir)\n",
-    "    proto_model = TransformationInferenceNet(**proto_config.model.inference)\n",
+    "    proto_model = TransformationInferenceNet(\n",
+    "        bounds=proto_config.get(\"augment_bounds\", None),\n",
+    "        offset=proto_config.get(\"augment_offset\", None),\n",
+    "        **proto_config.model.inference\n",
+    "    )\n",
     "    # Load the gen model\n",
     "    gen_config, gen_state = get_config_state(gen_checkpoint_dir)\n",
-    "    gen_model = TransformationGenerativeNet(**gen_config.model.generative)\n",
+    "    gen_model = TransformationGenerativeNet(\n",
+    "        bounds=gen_config.get(\"augment_bounds\", None),\n",
+    "        offset=gen_config.get(\"augment_offset\", None),\n",
+    "        **gen_config.model.generative\n",
+    "    )\n",
     "\n",
     "    assert gen_config.prototype_model_dir == proto_checkpoint_dir\n",
     "\n",
