--- a/notebooks/proto_gen_model.ipynb
+++ b/notebooks/proto_gen_model.ipynb
@@ -331,7 +331,11 @@
     }
    ],
    "source": [
-    "proto_model = TransformationInferenceNet(**config.model.inference.to_dict())\n",
+    "proto_model = TransformationInferenceNet(\n",
+    "    bounds=config.get(\"augment_bounds\", None),\n",
+    "    offset=config.get(\"augment_offset\", None),\n",
+    "    **config.model.inference.to_dict()\n",
+    ")\n",
     "\n",
     "proto_state = create_transformation_inference_state(proto_model, config, proto_init_rng)"
    ]
@@ -682,7 +686,11 @@
     }
    ],
    "source": [
-    "gen_model = TransformationGenerativeNet(**config.model.generative.to_dict())\n",
+    "gen_model = TransformationGenerativeNet(\n",
+    "    bounds=config.get(\"augment_bounds\", None),\n",
+    "    offset=config.get(\"augment_offset\", None),\n",
+    "    **config.model.generative.to_dict()\n",
+    ")\n",
     "\n",
     "gen_state = create_transformation_generative_state(gen_model, config, gen_init_rng)"
    ]
