--- a/tests/test_transformed_datasets.ipynb
+++ b/tests/test_transformed_datasets.ipynb
@@ -1708,10 +1708,10 @@
    ],
    "source": [
     "import tensorflow_datasets as tfds\n",
-    "import src.utils.datasets.galaxy_mnist\n",
+    "# import src.utils.datasets.galaxy_mnist\n",
     "\n",
-    "builder = tfds.builder('galaxy_mnist')\n",
-    "builder.download_and_prepare()\n",
+    "# builder = tfds.builder('galaxy_mnist')\n",
+    "# builder.download_and_prepare()\n",
     "\n",
     "(ds_train, ds_test), ds_info = tfds.load('galaxy_mnist', split=['train', 'test'], with_info=True, as_supervised=True)\n",
     "\n",
