Prepare public version of code

--- a/notebooks/augmented_dsprites_example.ipynb
+++ b/notebooks/augmented_dsprites_example.ipynb
@@ -10,13 +10,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Imports"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -60,72 +53,6 @@
    "source": [
     "import numpy as np\n",
     "import math\n",
-    "\n",
-    "\n",
-    "# dsprites_config = ConfigDict()\n",
-    "\n",
-    "# dsprites_config.square_distribution = ConfigDict()\n",
-    "\n",
-    "# dsprites_config.square_distribution.orientation = DistributionConfig(\n",
-    "#     DistributionType.UNIFORM, {\"low\": 0.0, \"high\": np.pi * 2}\n",
-    "# )\n",
-    "# dsprites_config.square_distribution.scale = DistributionConfig(\n",
-    "#     DistributionType.TRUNCATED_NORMAL,\n",
-    "#     {\"minval\": 0., \"maxval\": 1.0, \"loc\": 0.7, \"scale\": 0.3},\n",
-    "# )\n",
-    "# dsprites_config.square_distribution.x_position = DistributionConfig(\n",
-    "#     DistributionType.UNIFORM,\n",
-    "#     {\"low\": 0.5, \"high\": 1.0},\n",
-    "# )\n",
-    "# dsprites_config.square_distribution.y_position = DistributionConfig(\n",
-    "#     DistributionType.UNIFORM,\n",
-    "#     {\"low\": 0.5, \"high\": 1.0},\n",
-    "# )\n",
-    "\n",
-    "# dsprites_config.ellipse_distribution = ConfigDict()\n",
-    "# dsprites_config.ellipse_distribution.orientation = DistributionConfig(\n",
-    "#     DistributionType.UNIFORM, {\"low\": 0.0, \"high\": np.pi / 2}\n",
-    "# )\n",
-    "# dsprites_config.ellipse_distribution.scale = DistributionConfig(\n",
-    "#     DistributionType.TRUNCATED_NORMAL,\n",
-    "#     {\"minval\": 0.55, \"maxval\": 0.95, \"loc\": 0.7, \"scale\": 0.15},\n",
-    "# )\n",
-    "# dsprites_config.ellipse_distribution.x_position = DistributionConfig(\n",
-    "#     DistributionType.TRUNCATED_NORMAL,\n",
-    "#     {\"minval\": 0.0, \"maxval\": 1., \"loc\": 0.5, \"scale\": 0.25},\n",
-    "# )\n",
-    "# dsprites_config.ellipse_distribution.y_position = DistributionConfig(\n",
-    "#     DistributionType.TRUNCATED_NORMAL,\n",
-    "#     {\"minval\": 0.35, \"maxval\": 0.65, \"loc\": 0.5, \"scale\": 0.5},\n",
-    "# )\n",
-    "\n",
-    "\n",
-    "# dsprites_config.heart_distribution = ConfigDict()\n",
-    "\n",
-    "# dsprites_config.heart_distribution.orientation = DistributionConfig(\n",
-    "#     DistributionType.DELTA, {\"value\": 0.0}\n",
-    "# )\n",
-    "# dsprites_config.heart_distribution.scale = DistributionConfig(\n",
-    "#     DistributionType.UNIFORM,\n",
-    "#     {\"low\": 0.7, \"high\": 1.},\n",
-    "# )\n",
-    "# dsprites_config.heart_distribution.x_position = DistributionConfig(\n",
-    "#     DistributionType.UNIFORM,\n",
-    "#     {\"low\": 0., \"high\": 1.0},\n",
-    "# )\n",
-    "# dsprites_config.heart_distribution.y_position = DistributionConfig(\n",
-    "#     DistributionType.BIUNIFORM,\n",
-    "#     {\n",
-    "#         \"low1\": 0.0,\n",
-    "#         \"high1\": 0.2,\n",
-    "#         \"low2\": 0.8,\n",
-    "#         \"high2\": 1.0,\n",
-    "#     },\n",
-    "# )\n",
-    "\n",
-    "# dsprites_config.heart_distribution.unnormalised_shape_prob = 1 / 3\n",
-    "# dsprites_config.square_distribution.unnormalised_shape_prob = 1 / 3\n",
-    "# dsprites_config.ellipse_distribution.unnormalised_shape_prob = 1 / 3\n",
     "\n",
     "dsprites_config = ConfigDict()\n",
     "\n",
@@ -552,7 +479,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jax-learning-inv",
+   "display_name": "inv",
    "language": "python",
    "name": "python3"
   },
@@ -566,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.10"
   },
   "orig_nbformat": 4
  },
