--- a/notebooks/vae_figures.ipynb
+++ b/notebooks/vae_figures.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MNIST Plot"
+    "### MNIST results"
    ]
   },
   {
@@ -1503,7 +1503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Galaxy MNIST result"
+    "### Galaxy MNIST results"
    ]
   },
   {
@@ -1823,7 +1823,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Patch Camelyon result"
+    "### Patch Camelyon results"
    ]
   },
   {
