--- a/tests/test_transformed_datasets.ipynb
+++ b/tests/test_transformed_datasets.ipynb
@@ -1848,11 +1848,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "85696cc8f8f812d4e53cfd8a6f4960223adf32f47c94bbc41d022414b9401ed4"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('inv')",
+   "display_name": "inv",
    "language": "python",
    "name": "python3"
   },
